# compiler

./: .gitignore  BUILDING.md  CMakeLists.txt  README.md  SPEC.md  benchmark.k
docs/: conf.py
docs/_build/doctrees/: environment.pickle  index.doctree
docs/_build/html/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_build/html/_sources/: index.rst.txt
docs/_build/html/_static/: documentation_options.js
examples/building/: build.k  helloworld.k
examples/control_flow/: for.kng  if.kng
examples/functions/: functions.kng
examples/generics/: generics.kng
examples/helloworld/: helloworld.k  helloworld.kng
examples/includes/: import.kng  include.kng
examples/variables/: variables.kng
lib/concurrency/: async.kng  thread.kng
lib/container/: array.kng  container.kng  stack.kng  vector.kng
lib/io/: testio.kng
lib/memory/: allocation.kng  smart.kng
lib/net/: socket.kng
lib/string/: string.kng
lib/utils/: option.kng  result.kng
lib/web/: webserver.kng
res/: logo.psd
scripts/: CMakeLists.txt  OLDCMakeLists.txt  buildunix.sh  buildwin.bat  msbuild.bat  msbuild.sh  ninjabuild.bat  ninjabuild.sh  run.bat  unixbuild.bat  unixbuild.sh  winbuild.bat  winbuild.sh
src/: ast.cpp  ast.h  benchmark.kng  common.cpp  common.h  compiler.cpp  compiler.h  errhandler.h  error.cpp  error.h  exporter.cpp  exporter.h  fileutils.h  first_pass.cpp  first_pass.h  generator.cpp  generator.h  import.cpp  import.h  lexer.cpp  lexer.h  llvmgenerator.cpp  llvmgenerator.h  main.cpp  options.h  output  output.s  parser.cpp  parser.h  pass1.cpp  pass1.h  stringutils.h  symtable.h  test.cpp  token.cpp  token.h  typechecking.cpp  typechecking.h  types.cpp  types.h  (+2 more)
